feat: add sites APIs
